Changelog for s6.

In 2.9.0.0
----------

 - Bugfixes.
 - The s6-fdholder-*c programs have been removed. They were unused: the
separation between (for instance) s6-fdholder-store and s6-fdholder-storec
added more complexity and more code than it brought benefits. The s6
package is now 7 binaries leaner.


In 2.8.0.1
----------

 - Bugfixes.


In 2.8.0.0
----------

 - Bugfixes.
 - Adaptation to skalibs-2.8.0.0.
 - s6-log can now notify readiness with the new -d option.
 - s6-log now has a default line limit of 8 kB.
 - In the accessrules library, checking against uidgid now checks the
uid/self key if the client and the server have the same uid, and the
gid/self key if the client and the server have the same gid. That means
s6-ipcserver-access can now be configured to allow/deny/specialcase
connections where the client's credentials are the same as the server's.
 - Everything builds as PIC by default.


In 2.7.2.2
----------

 - Bugfixes.


In 2.7.2.1
----------

 - Bugfixes.


In 2.7.2.0
----------

 - s6-ipcserver-socketbinder now takes a -B option to make the socket blocking.
 - s6-svscan now takes a "-d notif" option to notify readiness. This is
*shallow readiness*, i.e. readiness will be reported when s6-svscan is ready
to receive s6-svscanctl commands; it does *not* mean all the services started
at s6-svscan launch will be ready.
 - New optional file in a service directory: down-signal. It allows you to
customize the signal sent by s6-svc -d (and now s6-svc -r too).
 - New s6-svc option: -r. Sends the signal defined in the down-signal file
(still SIGTERM by default).
 - Adaptation to skalibs-2.7.0.0.
 - Optional nsss support added.


In 2.7.1.1
----------

 - Bugfixes.


In 2.7.1.0
----------

 - Bugfixes.
 - s6-svwait et al. now exit 102 instead of hanging if s6-supervise dies.
 - New commands: s6-svdt, s6-svdt-clear, s6-permafailon
 - s6-tai64nlocal can now print GMT times with the -g option.


In 2.7.0.0
----------

 - Bugfixes.