@@ -18,6 +18,17 @@
 
 <h1> What has changed in s6 </h1>
 
+<h2> in 2.9.0.0 </h2>
+
+<ul>
+ <li> <a href="//skarnet.org/software/skalibs/"></a>skalibs</a>
+dependency bumped to 2.9.0.0. </li>
+ <li> <a href="//skarnet.org/software/execline/">execline</a>
+dependency bumped to 2.5.2.0. </li>
+ <li> All the <tt>s6-fdholder-*c</tt> binaries have been
+removed. </li>
+</ul>
+
 <h2> in 2.8.0.1 </h2>
 
 <ul>
