@@ -1,4 +1,4 @@
 package=s6
-version=2.8.0.1
+version=2.9.0.0
 category=admin
 package_macro_name=S6
